Ensure streams use utf-16 so it doesn't piss itself for some machines